feat: 티켓 갯수에 따라 등급 변경
