# app.js
@@ -7,7 +7,6 @@ const morgan = require(`morgan`)
 const path = require(`path`)
 const userRouter = require(`./routes/user`)
 const ticketRouter = require(`./routes/ticket`)
-const performancesRouter = require(`./routes/performances`)
 const performanceRouter = require(`./routes/performance`)
 const communityRouter = require(`./routes/community`)
 const registerRouter = require(`./routes/register`)
@@ -53,7 +52,6 @@ app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerFile))
 
 app.use(`/user`, userRouter)
 app.use(`/performance`, performanceRouter)
-app.use(`/performances`, performancesRouter)
 app.use(`/ticket`, ticketRouter)
 app.use(`/community`, communityRouter)
 app.use(`/register`, registerRouter)
