# models/index.js
@@ -14,7 +14,7 @@ db.Hashtag = require(`./hashtag`)(sequelize,Sequelize)
 db.Post = require(`./post`)(sequelize,Sequelize)
 db.Image = require(`./image`)(sequelize,Sequelize)
 db.Community = require(`./community`)(sequelize,Sequelize)
-db.Communityclass = require(`./communityclass`)(sequelize,Sequelize)
+db.Communitystatus = require(`./communitystatus`)(sequelize,Sequelize)
 
 
 Object.keys(db).forEach(modelName => {
